--- a/notebooks/trainer_dev.ipynb
+++ b/notebooks/trainer_dev.ipynb
@@ -21,12 +21,11 @@
    "outputs": [],
    "source": [
     "cfg = GUTENBERG_CONFIG\n",
-    "cfg.notebook_mode = True\n",
     "cfg.model_id_or_path = SMOL_LM_135M\n",
     "cfg.eval_steps = 100\n",
     "cfg.max_samples = 100\n",
     "cfg.eval_data_mode = \"fixed\"\n",
-    "wrapper = TrainerWrapper(cfg)"
+    "wrapper = TrainerWrapper(cfg, True)"
    ]
   },
   {
