--- a/notebooks/writing_dpo_dev.ipynb
+++ b/notebooks/writing_dpo_dev.ipynb
@@ -15,8 +15,7 @@
     "\n",
     "cfg = WRITING_DPO_CONFIG\n",
     "cfg.train_batch_size = 1\n",
-    "cfg.model_id_or_path = SMOL_LM_135M\n",
-    "cfg.notebook_mode = True"
+    "cfg.model_id_or_path = SMOL_LM_135M"
    ]
   },
   {
@@ -25,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wrapper = TrainerWrapper(cfg)\n",
+    "wrapper = TrainerWrapper(cfg, True)\n",
     "wrapper.init_model()"
    ]
   },
