--- a/notebooks/connections_dev.ipynb
+++ b/notebooks/connections_dev.ipynb
@@ -26,7 +26,6 @@
     "cfg.train_batch_size = 2\n",
     "cfg.num_generations = 2\n",
     "cfg.model_id_or_path = QWEN_1_5_B\n",
-    "cfg.notebook_mode = True\n",
     "cfg.max_samples = 1000"
    ]
   },
@@ -46,7 +45,7 @@
     }
    ],
    "source": [
-    "wrapper = TrainerWrapper(cfg)\n",
+    "wrapper = TrainerWrapper(cfg, True)\n",
     "wrapper.init_model()"
    ]
   },
