rename definitions, and writing grpo modal

--- a/notebooks/grpo_writing_dev.ipynb
+++ b/notebooks/grpo_writing_dev.ipynb
@@ -49,11 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'notebook'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "wrapper.data_module.train_dataset"
+    "wrapper.data_module.config.run_mode"
    ]
   },
   {
