--- a/notebooks/grpo_writing_dev.ipynb
+++ b/notebooks/grpo_writing_dev.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/brianfitzgerald/Documents/GitHub/smolmodels/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-04-15 20:42:24,013\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -21,9 +20,9 @@
     "sys.path.append(\"..\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from trl_wrapper.trainer_wrapper import TrainerWrapper, GRPO_WRITING_CONFIG, SMOL_LM_135M\n",
+    "from trl_wrapper.trainer_wrapper import TrainerWrapper, WRITING_GRPO_CONFIG, SMOL_LM_135M\n",
     "\n",
-    "cfg = GRPO_WRITING_CONFIG\n",
+    "cfg = WRITING_GRPO_CONFIG\n",
     "cfg.train_batch_size = 2\n",
     "cfg.num_generations = 2\n",
     "cfg.model_id_or_path = SMOL_LM_135M\n",
@@ -32,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-04-15 20:42:26.368\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mSetting padding side to: right\u001b[0m\n"
+      "\u001b[32m2025-04-16 18:48:15.196\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mSetting padding side to: right\u001b[0m\n"
      ]
     }
    ],
@@ -49,17 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-04-15 20:43:48.675\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m355\u001b[0m - \u001b[1mUsing chat template override: smollmv2\u001b[0m\n",
-      "Map: 100%|██████████| 10647/10647 [00:00<00:00, 18990.15 examples/s]\n",
-      "Map: 100%|██████████| 1184/1184 [00:00<00:00, 24651.80 examples/s]\n",
-      "\u001b[32m2025-04-15 20:43:49.806\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msynthetic_data.writing_judge\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mrun_mode: notebook\u001b[0m\n"
+      "\u001b[32m2025-04-16 18:48:19.713\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m355\u001b[0m - \u001b[1mUsing chat template override: smollmv2\u001b[0m\n",
+      "Map: 100%|██████████| 10647/10647 [00:00<00:00, 26494.29 examples/s]\n",
+      "Map: 100%|██████████| 1184/1184 [00:00<00:00, 26652.08 examples/s]\n",
+      "\u001b[32m2025-04-16 18:48:20.713\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msynthetic_data.writing_judge\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mrun_mode: notebook\u001b[0m\n"
      ]
     }
    ],
@@ -69,16 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-04-16 18:48:51.604\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m315\u001b[0m - \u001b[1mUsing device: mps\u001b[0m\n",
+      "\u001b[32m2025-04-16 18:48:51.605\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m329\u001b[0m - \u001b[1mLoading model HuggingFaceTB/SmolLM2-135M-Instruct with attn_impl: sdpa\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "wrapper.init_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +95,7 @@
        "'notebook'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,9 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-04-16 18:48:56.762\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m393\u001b[0m - \u001b[1mSaving output to: ./runs/04-16-18-48-886102-smollm2-135m-instruct-\u001b[0m\n",
+      "\u001b[32m2025-04-16 18:48:56.763\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m416\u001b[0m - \u001b[1mInitializing trainer, run_name: 04-16-18-48-886102-smollm2-135m-instruct-, wandb project: writing-grpo\u001b[0m\n",
+      "\u001b[32m2025-04-16 18:48:56.763\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m499\u001b[0m - \u001b[1mUsing vllm: False\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "wrapper.init_trainer()"
    ]
@@ -116,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'instruction' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(wrapper\u001b[38;5;241m.\u001b[39mdata_module\u001b[38;5;241m.\u001b[39mbench\u001b[38;5;241m.\u001b[39mformat_prompt(\u001b[43minstruction\u001b[49m, completion))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'instruction' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(wrapper.data_module.bench.format_prompt(instruction, completion))"
    ]
