--- a/notebooks/eval_analysis.ipynb
+++ b/notebooks/eval_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,21 @@
       "Emotionally Engaging: 15.03 ± 1.74\n",
       "Coherent: 16.25 ± 1.26\n",
       "Adherence to Instructions: 17.68 ± 2.22\n",
-      "Consistent Voice/Tone of Writing: 17.79 ± 0.74\n"
+      "Consistent Voice/Tone of Writing: 17.79 ± 0.74\n",
+      "\n",
+      "Average scores for eq_bench_writing_mistral-small-3_04-21-20-51_690:\n",
+      "Believable Character Actions: 11.68 ± 4.69\n",
+      "Emotionally Engaging: 10.77 ± 4.72\n",
+      "Coherent: 12.77 ± 4.60\n",
+      "Adherence to Instructions: 13.39 ± 5.96\n",
+      "Consistent Voice/Tone of Writing: 14.55 ± 4.21\n",
+      "\n",
+      "Average scores for eq_bench_writing_mistral-small-3_04-21-20-56_156:\n",
+      "Believable Character Actions: 10.13 ± 4.49\n",
+      "Emotionally Engaging: 9.07 ± 4.52\n",
+      "Coherent: 10.71 ± 4.92\n",
+      "Adherence to Instructions: 11.97 ± 6.06\n",
+      "Consistent Voice/Tone of Writing: 13.65 ± 4.40\n"
      ]
     }
    ],
