--- a/notebooks/grpo_writing_dev.ipynb
+++ b/notebooks/grpo_writing_dev.ipynb
@@ -78,14 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "dataset_pd = pd.read_parquet(\n",
     "    \"../dataset_files/gutenberg_backtranslate_from_txt.parquet\"\n",
-    ")"
+    ")\n",
+    "completion, instruction = dataset_pd.loc[500]['text'], dataset_pd.loc[500]['instruction']"
    ]
   },
   {
@@ -94,7 +95,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(wrapper.data_module.bench.format_prompt(instruction, completion))"
+    "max_score = 0\n",
+    "for i in range(10000):\n",
+    "    completion = dataset_pd.loc[i]['text']\n",
+    "    score = wrapper.data_module.bench.calculate_slop_index(completion)\n",
+    "    if score > max_score:\n",
+    "        max_score = score\n",
+    "        print(score)\n",
+    "print(max_score)"
    ]
   },
   {
@@ -103,7 +111,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "completion, instruction = dataset_pd.loc[500]['text'], dataset_pd.loc[500]['instruction']\n",
     "wrapper.data_module.reward_functions()[0]([instruction], [completion])"
    ]
   }
