--- a/notebooks/gutenberg_dev.ipynb
+++ b/notebooks/gutenberg_dev.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/brianfitzgerald/Documents/GitHub/smolmodels/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import polars as pl\n",
     "from huggingface_hub import snapshot_download\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,53 +27,23 @@
     "\n",
     "from synthetic_data.tasks.writing import _get_gutenberg_subset\n",
     "\n",
-    "gutenberg_pq: pl.DataFrame = pl.read_parquet(\"../dataset_files/gutenberg_backtranslate_from_txt_conversations.parquet\")"
+    "gutenberg_pq: pl.DataFrame = pl.read_parquet(\"../dataset_files/epubs.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['conversation']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gutenberg_pq.columns"
+    "gutenberg_pq.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['conversation'])\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'title'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m gutenberg_pq\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m10\u001b[39m)\u001b[38;5;241m.\u001b[39miter_rows(named\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(row\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[0;32m---> 14\u001b[0m     display(Markdown(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m**\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtitle\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m**\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     15\u001b[0m     row_out \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m task\u001b[38;5;241m.\u001b[39mpreprocess_row(row)\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m row_out:\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'title'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tiktoken\n",
     "from synthetic_data.gutenberg_parser import super_cleaner\n",
@@ -101,12 +62,13 @@
     "    row_out = await task.preprocess_row(row)\n",
     "    for row in row_out:\n",
     "        n_tokens = sum([len(tiktoken_encoder.encode(par)) for par in row['text']])\n",
-    "        print(\"-\"*100)\n",
-    "        display(Markdown(row['text']))\n",
-    "        print(f\"n_tokens: {n_tokens}\")\n",
+    "        # print(\"-\"*100)\n",
+    "        # display(Markdown(row['text']))\n",
+    "        # print(f\"n_tokens: {n_tokens}\")\n",
     "        total += 1\n",
-    "    if total > 10:\n",
-    "        break\n"
+    "    print(total)\n",
+    "\n",
+    "print(total)\n"
    ]
   },
   {
@@ -116,6 +78,7 @@
    "outputs": [],
    "source": [
     "import re\n",
+    "from synthetic_data.utils import ldictl\n",
     "\n",
     "input = first_sample.to_dicts()\n",
     "formatted_out = task.format_input_conversation(ldictl(input))"
@@ -127,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "formatted_out[0]"
+    "formatted_out"
    ]
   }
  ],
