--- a/notebooks/dataset_review.ipynb
+++ b/notebooks/dataset_review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "476bffaf",
    "metadata": {},
    "outputs": [],
@@ -10,120 +10,23 @@
     "import polars as pl\n",
     "\n",
     "backtranslate_df = pl.read_parquet(\n",
-    "    \"../dataset_files/epubs.parquet\"\n",
+    "    \"../dataset_files/gutenberg_summary_continuation.parquet\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a876af37",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (17, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>title</th><th>text</th></tr><tr><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;EPUB publication.epub&quot;</td><td>&quot;A Mystery Reader 001: Short St…</td></tr><tr><td>&quot;A Mystery Reader Short Stories…</td><td>&quot;A Mystery Reader 001: Short St…</td></tr><tr><td>&quot;9781541071735(1).epub&quot;</td><td>&quot;[]\n",
-       "\n",
-       "[Image]\n",
-       "\n",
-       "Dedicated to Robe…</td></tr><tr><td>&quot;EPUB publication 3.epub&quot;</td><td>&quot;[]\n",
-       "\n",
-       " \n",
-       "\n",
-       "100\n",
-       "\n",
-       "GREAT\n",
-       "\n",
-       "SCIENCE\n",
-       "\n",
-       "FI…</td></tr><tr><td>&quot;EPUB publication 2.epub&quot;</td><td>&quot;[]\n",
-       "\n",
-       "[burb]\n",
-       "\n",
-       "EARLY BIRD BOOKS\n",
-       "\n",
-       "…</td></tr><tr><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;EPUB publication 5.epub&quot;</td><td>&quot;[]\n",
-       "\n",
-       "&nbsp;&nbsp;------------------------…</td></tr><tr><td>&quot;Golden Age of Science Fiction …</td><td>&quot;[]\n",
-       "\n",
-       "&nbsp;&nbsp;------------------------…</td></tr><tr><td>&quot;The Golden Age of Science Fict…</td><td>&quot;[]\n",
-       "\n",
-       "&nbsp;&nbsp;(1/15) The Golden Age of…</td></tr><tr><td>&quot;EPUB publication 7.epub&quot;</td><td>&quot;[]\n",
-       "\n",
-       "Halcyon Classics Series\n",
-       "\n",
-       "T…</td></tr><tr><td>&quot;EPUB publication 6.epub&quot;</td><td>&quot;[]\n",
-       "\n",
-       "&nbsp;&nbsp;------------------------…</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (17, 2)\n",
-       "┌─────────────────────────────────┬─────────────────────────────────┐\n",
-       "│ title                           ┆ text                            │\n",
-       "│ ---                             ┆ ---                             │\n",
-       "│ str                             ┆ str                             │\n",
-       "╞═════════════════════════════════╪═════════════════════════════════╡\n",
-       "│ EPUB publication.epub           ┆ A Mystery Reader 001: Short St… │\n",
-       "│ A Mystery Reader Short Stories… ┆ A Mystery Reader 001: Short St… │\n",
-       "│ 9781541071735(1).epub           ┆ []                              │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ [Image]                         │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ Dedicated to Robe…              │\n",
-       "│ EPUB publication 3.epub         ┆ []                              │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ 100                             │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ GREAT                           │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ SCIENCE                         │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ FI…                             │\n",
-       "│ EPUB publication 2.epub         ┆ []                              │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ [burb]                          │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ EARLY BIRD BOOKS                │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ …                               │\n",
-       "│ …                               ┆ …                               │\n",
-       "│ EPUB publication 5.epub         ┆ []                              │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆   ------------------------…     │\n",
-       "│ Golden Age of Science Fiction … ┆ []                              │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆   ------------------------…     │\n",
-       "│ The Golden Age of Science Fict… ┆ []                              │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆   (1/15) The Golden Age of…     │\n",
-       "│ EPUB publication 7.epub         ┆ []                              │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ Halcyon Classics Series         │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆ T…                              │\n",
-       "│ EPUB publication 6.epub         ┆ []                              │\n",
-       "│                                 ┆                                 │\n",
-       "│                                 ┆   ------------------------…     │\n",
-       "└─────────────────────────────────┴─────────────────────────────────┘"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "backtranslate_df"
+    "from IPython.display import Markdown\n",
+    "for row in backtranslate_df.to_dicts():\n",
+    "    print(row.keys())\n",
+    "    display(Markdown(row['prefix']))\n",
+    "    display(Markdown(row['summary_content']))\n",
+    "    display(Markdown(row['summary']))\n"
    ]
   }
  ],
